tests/dev_and_build/js_module_syntax_error/output/error.txt
parse error on "js_module"
@jsenv/core/tests/dev_and_build/js_module_syntax_error/client/main_syntax_error.js:4:16
1 | // above 1
2 | // above 2
3 | // above 3
4 | /* before */ --; /* after */
                   ^
Unexpected token (4:15)
--- first reference ---
@jsenv/core/tests/dev_and_build/js_module_syntax_error/client/main.html:9:27
--- plugin name ---
"jsenv:js_reference_analysis"